# d-cord

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build2.sh  dbg.sh  dppcord-config.cmake  install_manifest.txt  todo
example/: CMakeCache.txt  CMakeLists.txt  Example  Makefile  bot.cpp  bot.hpp  cmake_install.cmake  config.json  log  test.db
include/dppcord/client/: DiscordClient.hpp
include/dppcord/command/: Command.hpp  CommandName.hpp  LambdaCommand.hpp  WrappedCommand.hpp  util.hpp
include/dppcord/command/argument/: Argument.hpp  ArgumentList.hpp  BoolArgument.hpp  DecimalArgument.hpp  IArgument.hpp  StringArgument.hpp
include/dppcord/command/builder/: CommandBuilder.hpp  CommandMap.hpp
include/dppcord/command/parser/: CommandParser.hpp  ParsedCommand.hpp
include/dppcord/command/unpack/: ArgumentConversion.hpp  Placeholder.hpp  Unpack.hpp
include/dppcord/core/client/: DiscordClient.hpp
include/dppcord/core/config/: ConfigData.hpp  ConfigReader.hpp
include/dppcord/core/handler/: GuildsHandler.hpp  UsersHandler.hpp
include/dppcord/core/objects/: Channel.hpp  Emoji.hpp  Guild.hpp  GuildUser.hpp  IIdentifiableObject.hpp  INamedObject.hpp  Role.hpp  Snowflake.hpp  User.hpp
include/dppcord/core/objects/channel/: BaseChannel.hpp  Channel.hpp  ChannelTypes.hpp  DmChannel.hpp  GuildChannel.hpp  GuildTextChannel.hpp  GuildVoiceChannel.hpp  TextChannel.hpp
include/dppcord/core/objects/emoji/: Emoji.hpp
include/dppcord/core/objects/guild/: Guild.hpp  GuildsHandler.hpp
include/dppcord/core/objects/message/: BaseMessage.hpp
include/dppcord/core/objects/user/: BotUser.hpp  GuildUser.hpp  User.hpp  UsersHandler.hpp
include/dppcord/core/task/: BaseTask.hpp
include/dppcord/database/: Database.hpp  SQLiteDatabase.hpp
include/dppcord/plugin/: IPlugin.hpp
include/dppcord/rest/: DiscordEndpoint.hpp  Request.hpp  RequestContent.hpp  RequestHeaderList.hpp  RequestResponse.hpp
include/dppcord/util/: Timestamp.hpp  jsonutil.hpp
include/dppcord/util/constants/: config.hpp
include/dppcord/websocket/: WebsocketConnection.hpp  WebsocketConnectionStatus.hpp  WebsocketHandler.hpp
include/dppcord/websocket/api/gateway/: GatewayCloseCodes.hpp  GatewayOpCodes.hpp  Heartbeater.hpp
include/dppcord/websocket/api/gateway/events/: BaseEvent.hpp  ChannelCreateEvent.hpp  DispatchDistributor.hpp  DispatchEvents.hpp  GuildCreateEvent.hpp  MessageCreateEvent.hpp  MessageDeleteEvent.hpp  MessageReactionAdd.hpp  PresenceUpdateEvent.hpp  ReadyEvent.hpp  ResumeEvent.hpp  TypingStartEvent.hpp
include/dppcord/websocket/api/gateway/events/channel/: ChannelCreateEvent.hpp  ChannelDeleteEvent.hpp  ChannelUpdateEvent.hpp
include/dppcord/websocket/api/gateway/events/guild/: GuildBanAddEvent.hpp  GuildBanRemoveEvent.hpp  GuildCreateEvent.hpp  GuildEmojisUpdateEvent.hpp  GuildMemberAddEvent.hpp  GuildMemberRemoveEvent.hpp  GuildMemberUpdateEvent.hpp  GuildMembersChunkEvent.hpp  GuildRoleCreateEvent.hpp  GuildRoleDeleteEvent.hpp  GuildRoleUpdateEvent.hpp  GuildUpdateEvent.hpp
include/dppcord/websocket/api/gateway/events/message/: MessageCreateEvent.hpp  MessageDeleteEvent.hpp  MessageReactionAdd.hpp  MessageReactionRemoveAllEvent.hpp
plugins/MoneySystem/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake.sh  cmake_install.cmake  dppmoney-config.cmake  install_manifest.txt  libdppmoney.so.1  libdppmoney.so.1.0.0  plugin.cpp  plugin.hpp
plugins/example_plugin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake.sh  cmake_install.cmake  example_plugin-config.cmake  install_manifest.txt  libexample_plugin.so.1  libexample_plugin.so.1.0.0  plugin.cpp  plugin.hpp
src/dppcord/client/: DiscordClient.cpp
src/dppcord/command/: Command.cpp
src/dppcord/command/argument/: ArgumentList.cpp  BoolArgument.cpp  DecimalArgument.cpp  StringArgument.cpp
src/dppcord/command/builder/: CommandBuilder.cpp  CommandMap.cpp
src/dppcord/command/parser/: CommandParser.cpp
src/dppcord/core/client/: DiscordClient.cpp
src/dppcord/core/config/: ConfigData.cpp  ConfigReader.cpp
src/dppcord/core/handler/: GuildsHandler.cpp  UsersHandler.cpp
src/dppcord/core/objects/: Channel.cpp  Emoji.cpp  Guild.cpp  GuildUser.cpp  Role.cpp  User.cpp
src/dppcord/core/objects/channel/: BaseChannel.cpp  Channel.cpp  DmChannel.cpp  GuildChannel.cpp  GuildTextChannel.cpp  GuildVoiceChannel.cpp  TextChannel.cpp
src/dppcord/core/objects/emoji/: Emoji.cpp
src/dppcord/core/objects/guild/: Guild.cpp  GuildUser.cpp  GuildsHandler.cpp
src/dppcord/core/objects/message/: BaseMessage.cpp
src/dppcord/core/objects/user/: BotUser.cpp  GuildUser.cpp  User.cpp  UsersHandler.cpp
src/dppcord/core/task/: BaseTask.cpp
src/dppcord/database/: Database.cpp  SQLiteDatabase.cpp
src/dppcord/plugin/: IPlugin.cpp
src/dppcord/rest/: DiscordEndpoint.cpp  Request.cpp  RequestContent.cpp  RequestHeaderList.cpp  RequestResponse.cpp
src/dppcord/websocket/: WebsocketConnection.cpp  WebsocketHandler.cpp
src/dppcord/websocket/api/gateway/: Heartbeater.cpp
src/dppcord/websocket/api/gateway/events/: BaseEvent.cpp  ChannelCreateEvent.cpp  DispatchDistributor.cpp  GuildCreateEvent.cpp  MessageCreateEvent.cpp  MessageDeleteEvent.cpp  MessageReactionAdd.cpp  PresenceUpdateEvent.cpp  ReadyEvent.cpp  ResumeEvent.cpp  TypingStartEvent.cpp  WebhooksUpdateEvent.cpp
src/dppcord/websocket/api/gateway/events/user/: UserUpdateEvent.cpp
src/submodules/include/dppcord/command/: Command.hpp  util.hpp
src/submodules/include/dppcord/core/client/: DiscordClient.hpp
src/submodules/include/dppcord/core/objects/: Role.hpp  Snowflake.hpp
src/submodules/include/dppcord/core/task/: BaseTask.hpp
src/submodules/include/dppcord/database/: Database.hpp
src/submodules/include/dppcord/plugin/: IPlugin.hpp
src/submodules/include/dppcord/rest/: DiscordEndpoint.hpp  Request.hpp  RequestResponse.hpp
src/submodules/include/dppcord/util/: Timestamp.hpp  emojilist.hpp
src/submodules/include/dppcord/util/constants/: config.hpp
src/submodules/include/dppcord/websocket/: WebsocketConnection.hpp  WebsocketConnectionStatus.hpp  WebsocketHandler.hpp
(+59 files in other folders)
